# GeoGrasp_modified

./: CMakeLists.txt  README.md
data/Mesh/: sugar_box.iv
include/geograsp/: GeoGrasp.h  utility_functions.h
lib/geograsp/: GeoGrasp.cpp
src/: CompareClouds.cpp  CompareClouds_tuple.cpp  ReadPCDFiles.cpp  XYZ_predefined_grasp_points.cpp  cloud_processor.cpp  frameChange.cpp  fromMeshtoPointCloud.cpp  predefined_grasp_points2.cpp  test.cpp  utility_functions.cpp
